<resources>
    <string name="app_name">My Application</string>
    <string name="nazvanie">Короед</string>
    <string name="loginactloginbar">Номер телефона</string>
    <string name="loginactpasswordbar">Пароль</string>
    <string name="LoginButton">Войти</string>
    <string name="buttonforregistration">Регистрация</string>
    <string name="registerbutton">Зарегистрировать</string>
    <string name="otsciideti">Отцы и дети</string>
    <string name="descotciideti">«Отцы́ и де́ти» (рус. дореф. Отцы и Дѣти) — роман И. С. Тургенева, написанный в 1860—1861 годах и опубликованный в 1862 году в журнале «Русский вестник». В обстановке «великих реформ» книга стала сенсацией и привлекла к себе всеобщее внимание, а образ главного героя Евгения Базарова был воспринят как воплощение нового, пореформенного поколения, став примером для подражания молодёжи 1860-х гг. Свойственные Базарову бескомпромиссность, отсутствие преклонения перед авторитетами и старыми истинами, приоритет полезного над прекрасным стали идеалами первого поколения пореформенной интеллигенции</string>
    <string name="otciideticena">225 рублей</string>

</resources>